--- a/docs/styles.css
+++ b/docs/styles.css
@@ -15,10 +15,25 @@ body{
     margin-top: 15%;
 }
 .inputurl{
+    border-radius: 25px;
     text-align:center;
-    width: 550px;
+    width: 700px;
     height: 30px;
     font-family: inherit;
     font-size: inherit;
 
+}
+.inputsubmit{
+    margin-top: 20px;
+    border-radius: 25px;
+    width: 100px;
+    height: 30px;
+    color: white;
+    background-color: rgb(132,129,189);
+    border-color: transparent;
+    font-family: inherit;
+    cursor:pointer;
+}
+.inputsubmit:hover{
+    background-color: rgb(113,9,121);
 }
