--- a/docs/styles.css
+++ b/docs/styles.css
@@ -7,12 +7,13 @@ body{
 }
 .center-container{
     display: flex;
-    flex-direction: column;
+    /* flex-direction: row; */
     justify-content: center;
     align-items: center;
 }
 .center-container-height {
     margin-top: 15%;
+    justify-content: center;
 }
 .inputurl{
     border-radius: 25px;
@@ -24,10 +25,11 @@ body{
 
 }
 .inputsubmit{
+    display: block;
     margin-top: 20px;
     border-radius: 25px;
     width: 100px;
-    height: 30px;
+    height: 35px;
     color: white;
     background-color: rgb(132,129,189);
     border-color: transparent;
@@ -41,7 +43,7 @@ body{
     margin-top: 20px;
     border-radius: 25px;
     width: 100px;
-    height: 30px;
+    height: 35px;
     color: white;
     background-color: rgb(132,129,189);
     border-color: transparent;
