--- a/docs/styles.css
+++ b/docs/styles.css
@@ -74,7 +74,7 @@ body{
     height: 35px;
     color: white;
     background-color: #6B6B6B;
-    background:url("icons/copy_icon.png");
+    /* background:url("icons/copy_icon.png"); */
     border-color: transparent;
     font-family: inherit;
     cursor:pointer;
