--- a/docs/styles.css
+++ b/docs/styles.css
@@ -87,3 +87,43 @@ body{
     height : 20px;
     width : 20px;
 }
+.card{
+    display:none;
+    background-color: #6B6B6B;
+    margin-top: 10%;
+    width : 40%;
+    height: 50px;
+    border-radius: 25px;
+    font-family: inherit;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    cursor:pointer;
+
+}
+.headingcard{
+    display:none;
+    margin-top: 10%;
+    width : 10%;
+    height: 50px;
+    margin-right: 10px;
+    font-family: inherit;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+}
+.datecard{
+    display:none;
+    margin-top: 10%;
+    width : 10%;
+    height: 50px;
+    margin-left: 10px;
+    font-family: inherit;
+    font-size: 20px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+}
+
