--- a/docs/styles.css
+++ b/docs/styles.css
@@ -99,7 +99,7 @@ body{
     text-align: center;
     vertical-align: middle;
     line-height: 50px;
-    cursor:pointer;
+    cursor:pointer
 
 }
 .headingcard{
