--- a/docs/styles.css
+++ b/docs/styles.css
@@ -20,6 +20,7 @@ body{
     justify-content: center;
 }
 .inputurl{
+    display:block;
     border-radius: 25px;
     text-align:center;
     width: 700px;
@@ -126,4 +127,51 @@ body{
     vertical-align: middle;
     line-height: 50px;
 }
-
+.wave {
+    display:block;
+    width: 5px;
+    height: 100px;
+    background: #A2A2A2;
+    margin: 10px;
+    animation: wave 1s linear infinite;
+    border-radius: 20px;
+  }
+  .wave:nth-child(2) {
+    animation-delay: 0.1s;
+  }
+  .wave:nth-child(3) {
+    animation-delay: 0.2s;
+  }
+  .wave:nth-child(4) {
+    animation-delay: 0.3s;
+  }
+  .wave:nth-child(5) {
+    animation-delay: 0.4s;
+  }
+  .wave:nth-child(6) {
+    animation-delay: 0.5s;
+  }
+  .wave:nth-child(7) {
+    animation-delay: 0.6s;
+  }
+  .wave:nth-child(8) {
+    animation-delay: 0.7s;
+  }
+  .wave:nth-child(9) {
+    animation-delay: 0.8s;
+  }
+  .wave:nth-child(10) {
+    animation-delay: 0.9s;
+  }
+  
+  @keyframes wave {
+    0% {
+      transform: scale(0);
+    }
+    50% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(0);
+    }
+  }
