docs: show new domain when returning queries

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -100,7 +100,7 @@ body{
     text-align: center;
     vertical-align: middle;
     line-height: 50px;
-    cursor:pointer
+    cursor:pointer;
 
 }
 .headingcard{
